# RM_cpp

./: .gitignore  .gitmodules  .uuid  CMakeLists.txt  README.md  WatchDog.sh  autoaim.cpp  autoaim.hpp  frame.py
Detector/: .uuid  Detector.cpp  Detector.hpp
Rune/: Rune.cpp  Rune.hpp
Serial/: .uuid  Serial.cpp  Serial.hpp
Tracker/: .uuid  EKF.cpp  EKF.hpp  Tracker.cpp  Tracker.hpp  avgFilter.cpp  avgFilter.hpp
hik_camera/: .uuid  HikCam.cpp  HikCam.hpp
hik_camera/include/: HikCam.hpp
image/: .uuid  R.avi  guard1.avi  guard2.avi
model/: .uuid  best.xml  nano_ppp_v8.xml  nano_v8.xml  small_v8.xml
model/nano_v8_org/: .uuid  metadata.yaml  nano_v8.xml
model/small_v8_org/: .uuid  metadata.yaml  small_v8.xml
